daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N23_bad_aead_tag/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae3015840433f79223a50c1763898b9a2b267b53464011e866ebc0b5aba7583ab16faa565d980fc60d8a36ed306ca1c84f28168ee46241e8ab45f9aeb5cb703305870f80b01f602f6
